@@ -182,19 +182,19 @@ public interface Opcodes
     // these values are compared by reference and not by value
     // The constructor of Integer was deprecated in 9
     // but we are stuck with it by backward compatibility
-    Integer TOP = new Integer(0);
+    Integer TOP = Integer.valueOf(0);
 
-    Integer INTEGER = new Integer(1);
+    Integer INTEGER = Integer.valueOf(1);
 
-    Integer FLOAT = new Integer(2);
+    Integer FLOAT = Integer.valueOf(2);
 
-    Integer DOUBLE = new Integer(3);
+    Integer DOUBLE = Integer.valueOf(3);
 
-    Integer LONG = new Integer(4);
+    Integer LONG = Integer.valueOf(4);
 
-    Integer NULL = new Integer(5);
+    Integer NULL = Integer.valueOf(5);
 
-    Integer UNINITIALIZED_THIS = new Integer(6);
+    Integer UNINITIALIZED_THIS = Integer.valueOf(6);
 
     // opcodes // visit method (- = idem)
 
